Fixed: some folder node icons are hidden due to overflow

--- a/client_src/src/components/widgets/NodeTitle.module.css
+++ b/client_src/src/components/widgets/NodeTitle.module.css
@@ -1,4 +1,8 @@
 .dnt__node-title {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   border: none;
   outline: none;
   background-color: transparent;
