--- a/client_src/src/tree-theme/node-content-renderer.module.scss
+++ b/client_src/src/tree-theme/node-content-renderer.module.scss
@@ -1,5 +1,5 @@
 $row-padding: 2px;
-$hover-padding: 3px;
+$hover-padding: 2px;
 .rowWrapper {
   padding: $row-padding $row-padding $row-padding 0;
   height: 100%;
@@ -94,10 +94,10 @@ $hover-padding: 3px;
   height: 100%;
   //padding: 0 5px 0 30px;
   //min-width: 230px;
-  flex: 1 0 auto;
+  //flex: 1 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   background-color: transparent;
   //box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   //transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -112,6 +112,7 @@ $hover-padding: 3px;
   flex: 0 1 auto;
   padding-right: 20px;
   width: 100%;
+  overflow: hidden;
 }
 
 .rowToolbar {
